# SFML_Video_Game

./: CMakeLists.txt  main.cpp  path.txt
GFGame/: Background.cpp  Background.h  FinishFlag.cpp  FinishFlag.h  GFGame.cpp  GFGame.h  GameText.cpp  Hearts.cpp  Hearts.h  LostGameScreen.cpp  LostGameScreen.h  Map.cpp  Map.h  Monster.cpp  Monster.h  MonsterArray.cpp  MonsterArray.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Thumbnail.cpp  WonGameScreen.cpp  WonGameScreen.h  title.txt
exportToHTML/: Background.cpp.html  Background.h.html  FinishFlag.cpp.html  FinishFlag.h.html  GFGame.cpp.html  GFGame.h.html  Game.cpp.html  Game.h.html  GameText.cpp.html  GameText.h.html  Game_Interface.cpp.html  Game_Interface.h.html  Hearts.cpp.html  Hearts.h.html  LostGameScreen.cpp.html  LostGameScreen.h.html  Map.cpp.html  Map.h.html  Monster.cpp.html  Monster.h.html  MonsterArray.cpp.html  MonsterArray.h.html  Platform.cpp.html  Platform.h.html  Player.cpp.html  Player.h.html  Thumbnail.cpp.html  Thumbnail.h.html  WonGameScreen.cpp.html  WonGameScreen.h.html  index.html  title.txt.html
